[gd_scene load_steps=3 format=3 uid="uid://bs8l0gqo6l105"]

[ext_resource type="Script" uid="uid://c2vjo4v6m3ld0" path="res://addons/auto_structured/ui/controls/tag_control.gd" id="1_e3bbp"]
[ext_resource type="Texture2D" uid="uid://c45ah2jrtar3s" path="res://addons/auto_structured/assets/remove.svg" id="2_nddat"]

[node name="TagControl" type="HBoxContainer"]
script = ExtResource("1_e3bbp")

[node name="TagEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Tag"
flat = true

[node name="DeleteButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture_normal = ExtResource("2_nddat")
stretch_mode = 3

[connection signal="pressed" from="DeleteButton" to="." method="delete_pressed"]
